--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
   },
   "dependencies": {
     "@szhsin/react-menu": "^3.1.2",
+    "ethers": "^6.13.1",
     "js-confetti": "^0.10.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.24.1",
+    "viem": "^2.17.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
-    "@vitejs/plugin-react": "^2.1.0",
+    "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.31.8",
-    "typescript": "^4.6.4",
-    "vite": "^4.4.9",
+    "typescript": "^5.5.3",
+    "vite": "^4.5.3",
     "vite-plugin-pwa": "^0.16.5"
   }
 }
