--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bounty_ml"
+name = "mining"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,11 +9,13 @@ aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer" }
 bincode = "1.3.3"
 candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
 clap = { version = "4.5.8", features=["derive"]}
+dotenv = "0.15.0"
 lazy_static = "1.5.0"
 reqwest = "0.12.5"
+tiny-keccak = "2.0.2"
+tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
 tracing = { version = "0.1", default-features = false }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-tiny-keccak = "2.0.2"
 
 # Ethereum
 ethers = { tag = "v2.0.15-fix-reconnections", features = ["ws", "rustls"], git = "https://github.com/yetanotherco/ethers-rs.git" }
