--- a/rocket-test/Cargo.toml
+++ b/rocket-test/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.5.0-rc.1"  # Check the latest version on crates.io
-
+rocket = { version = "0.5.0-rc.1", features = ["json"] }
+rocket_cors = "0.5.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
