--- a/rocket-test/Cargo.toml
+++ b/rocket-test/Cargo.toml
@@ -8,3 +8,8 @@ rocket = { version = "0.5.0-rc.1", features = ["json"] }
 rocket_cors = "0.5.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+mining = { path="../" }
+
+ethers = { version = "2.0", features = ["legacy"] }
+derive-adhoc = "0.8.4"
