--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 RPC_URL=https://ethereum-holesky-rpc.publicnode.com
 PRIVATE_KEY=0x
+ESCROW_ADDRESS=0x23057256D67C09F3f6E289AD045cD410D03c4680
+MONGO_CONNECTION_STRING=
+MONGO_DATABASE_NAME=
